bin/testsuite/tests/compiler/src/errors/compiler4751.swg
#global testerror "Err0120"
struct Driver {}
var g_Driver: Driver

public func toto4751()->*Driver => &g_Driver
